# VibeDither

./: Cargo.toml  Chat GPT Log.md  GEMINI.md  README.md
.obsidian/: workspace.json
UI/: UI.txt
examples/: compare.rs
src/: image_io.rs  main.rs  spline.rs
src/pipeline/: mod.rs  shaders.wgsl
