[package]
name = "vibedither"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.27.2", features = ["wgpu"] }
wgpu = "0.19.4"
image = { version = "0.24.9", features = ["png", "jpeg", "webp"] }
rfd = "0.14.1"
arboard = "3.4.0"
bytemuck = { version = "1.15.0", features = ["derive"] }
pollster = "0.3.0"
log = "0.4.21"
env_logger = "0.11.3"
serde = { version = "1.0.197", features = ["derive"] }
anyhow = "1.0.81"

[build-dependencies]
# Future: embed icon or manifest